# urban-sprawl-mapping

./: index.html  pyproject.toml  urban_sprawl_mapping.html  urban_sprawl_mapping.py
data/: .gitignore
data/sprawl/: readme.md  sprawl indices2010_censustract - Jacksonville.csv
